--- a/doc.html
+++ b/doc.html
@@ -18,7 +18,7 @@
 
     <main class="container">
         <div class="uploader-card">
-            <form id="upload-form" action="/api/projects" method="POST">
+            <form id="upload-form" action="#" method="POST">
                 <h2>Share Your Project</h2>
                 <p>Fill out the details below to upload your project files.</p>
                 
@@ -35,7 +35,7 @@
                         <option value="html">HTML</option>
                         <option value="css">CSS</option>
                         <option value="java">Java</option>
-                        <option value="plaintext">Plain Text</option>
+                        <option value="text">Plain Text</option>
                     </select>
                 </div>
 
